changes 26th morning

--- a/index.html
+++ b/index.html
@@ -572,10 +572,10 @@
         <div class="container">
           <header class="section-header">
             <h3>Tech/Cultural Events</h3>
-            <p>
+            <!-- <p>
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
+            </p> -->
           </header>
 
           <div class="row events-extra wow fadeInUp">
@@ -798,8 +798,8 @@
                 </figure>
 
                 <div class="gallery-info">
-                  <h4>Club 1</h4>
-                  <p>Club</p>
+                  <h4>Kavyaragam</h4>
+                  <!-- <p>Club</p> -->
                 </div>
               </div>
             </div>
@@ -822,8 +822,8 @@
                 </figure>
 
                 <div class="gallery-info">
-                  <h4>Club 2</h4>
-                  <p>Club</p>
+                  <h4>E-Cell</h4>
+                  <p>E-Week</p>
                 </div>
               </div>
             </div>
@@ -843,8 +843,8 @@
                 </figure>
 
                 <div class="gallery-info">
-                  <h4>Event 2</h4>
-                  <p>Event</p>
+                  <h4>Anwesha' 19</h4>
+                  <p>Raghu Dixit (Band Night)</p>
                 </div>
               </div>
             </div>
@@ -867,8 +867,8 @@
                 </figure>
 
                 <div class="gallery-info">
-                  <h4>Club 3</h4>
-                  <p>Club</p>
+                  <h4>Yavanika</h4>
+                  <!-- <p>Club</p> -->
                 </div>
               </div>
             </div>
@@ -888,8 +888,8 @@
                 </figure>
 
                 <div class="gallery-info">
-                  <h4>Event 1</h4>
-                  <p>Event</p>
+                  <h4>Celesta</h4>
+                  <p>Drone Workshop</p>
                 </div>
               </div>
             </div>
@@ -912,8 +912,8 @@
                 </figure>
 
                 <div class="gallery-info">
-                  <h4>Event 3</h4>
-                  <p>Event</p>
+                  <h4>Celesta</h4>
+                  <p>Robotics Workshop</p>
                 </div>
               </div>
             </div>
@@ -1037,11 +1037,11 @@
                 <div class="col-sm-6 col-md-4">
                   <div class="profile-card">
                     <div class="profile-img">
-                      <img src="img/team/2019-20/parth-kulkarni.jpeg" alt="Team Image" />
+                      <img src="img/team/2019-20/unknown.png" alt="Team Image" />
                     </div>
                     <div class="profile-content">
                       <h2 class="title">
-                        Kulkarni Parth Parag
+                        Rushikesh Kumar
                         <span>General Secretary,Technical Affairs</span>
                       </h2>
                       <ul class="social-link">
@@ -1231,7 +1231,7 @@
                   <div class="profile-card">
                     <div class="profile-img">
                       <img
-                        src="./img/team/2018-19/shubhendu-yadav.jpg"
+                        src="./img/team/2018-19/shubhendu-yadav.JPG"
                         alt="Team Image"
                       />
                     </div>
@@ -1389,16 +1389,41 @@
   ============================-->
     <footer id="footer">
       <div class="container">
-        <div class="copyright">
-          Copyright &copy; Indian Institute of Technology, Patna
+        <div class="row">
+            <div class="copyright col-sm-3">
+              <strong>Quick Links:</strong>  
+              <br>
+              <br>
+              <a href="https://www.iitp.ac.in/"> IIT Patna</a>
+              <br>
+              <a href="https://www.iitp.ac.in/hostel/"> Hostel</a>              
+              <br>
+              <a href="https://www.iitp.ac.in/hostel/reachIITP.html"> Reach Us</a>              
+              <br>
+              <a href="https://www.iitp.ac.in/alumni/"> IIT-P AA</a>              
+            </div>
+            <div class="copyright col-sm-3">
+                <strong>Social Links:</strong>  
+                <br>
+                <br>
+                <a href="https://www.facebook.com/Students-Gymkhana-IIT-Patna-2014154592227407/"><i class="fa fa-facebook-square"></i> Students'  Gymkhana</a>
+                <br>
+                <a href="https://www.facebook.com/iitpfreshman/"><i class="fa fa-facebook-square"></i> Freshmen Forum</a>              
+                <br>
+                <a href="https://www.facebook.com/iitp.ac.in/"><i class="fa fa-facebook-square"></i> IIT Patna</a>              
+                <br>            
+              </div>
+            <div class="copyright col-sm-6">
+                Copyright &copy; <br>Indian Institute of Technology, Patna
+            </div>
         </div>
       </div>
     </footer>
     <!-- #footer -->
 
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
-    <!-- Uncomment below i you want to use a preloader -->
-    <!-- <div id="preloader"></div> -->
+    <!-- Uncomment below if you want to use a preloader -->
+    <div id="preloader"></div>
 
     <!-- JavaScript Libraries -->
     <script src="./lib/jquery/jquery.min.js"></script>
