--- a/index.html
+++ b/index.html
@@ -1041,7 +1041,7 @@
                     </div>
                     <div class="profile-content">
                       <h2 class="title">
-                        Rushikesh Kumar
+                        Rishikesh Kumar
                         <span>General Secretary,Technical Affairs</span>
                       </h2>
                       <ul class="social-link">
@@ -1423,7 +1423,7 @@
 
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
     <!-- Uncomment below if you want to use a preloader -->
-    <div id="preloader"></div>
+    <!-- <div id="preloader"></div> -->
 
     <!-- JavaScript Libraries -->
     <script src="./lib/jquery/jquery.min.js"></script>
