new hostel page

--- a/hostel.html
+++ b/hostel.html
@@ -218,7 +218,7 @@
     
               <div class="row events-extra wow fadeInUp" style="background-color: rgb(204, 216, 215);">
                 <div class="col-lg-6 content order-lg-1 order-2">
-                  <h4 class="text-center">STUDENT LIFE</h4>
+                  <h4 class="text-center">ABOUT THE HOSTELS</h4>
                   <p>
                     At IIT Patna, hostel is our home away from home. Hostel life is filled with fun and frolic as well as some frisk of study. Most of the student have their first time stay away from their parents when they come to IIT, but rest assured, there is nothing to worry about. Environment here is absolutely safe and secure. The community is very much caring an helpful.
                   </p>
@@ -250,7 +250,7 @@
                   </div>
                 </div>
                 <div class="col-lg-6 pt-5 pt-lg-0">
-                  <h4 class="text-center">NO RAGGING</h4>
+                  <h4 class="text-center">BUILDINGS</h4>
                   <p>
                     Ragging is completely prohibited at IIT Patna. Institute has zero tolerance for ragging. Prospective students has nothing to worry about it. In fact, when you start living at the hostels, you realize that seniors are extremely helpful. They are always nice to juniors. You can learn a great deal from your seniors.
                   </p>
@@ -268,7 +268,7 @@
                 </div>
     
                 <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1">
-                  <h4 class="text-center">ANNUAL FESTS</h4>
+                  <h4 class="text-center">GYMNASIUM</h4>
                   <p>
                     Fests are important parts of student's IIT Life. These fests are completely organized by students themselves. On the one hand, you get to relax from studies and enjoy, and on the other hand you gain several management and technical experiences that take you a long way in your life.
                   </p>
@@ -304,7 +304,7 @@
                 </div>
               </div>
               <div class="col-lg-6 pt-5 pt-lg-0">
-                <h4 class="text-center">EVERYDAY ACTIVITIES</h4>
+                <h4 class="text-center">MESS</h4>
                 <p>
                   There are plenty of activities going around in the hostel that makes hostel life fun. There are also inter block activities and competitions in sports and cultural fields. Also a variety of festivals are celebrated like Diwali, Holi, Janmashtami and Lohri. Students also go for sports practice, cycling, exercise and other recreational activities every evening. Classes and Labs start from 8am in the morning till 5pm in the evening, 1-2 pm is the lunch break during which students go to mess and have lunch. Saturday and Sunday are holidays during which students get time to relax, enjoy and self study.
                 </p>
@@ -444,7 +444,7 @@
                 <div class="col-md-12 wow fadeInUp">
                   <div class="about-col about-col-clip1">
                     <header class="section-header">
-                      <h2>About the Hostels</h2>
+                      <h2>Student Life</h2>
                     </header>
                     <p>
                       Indian Institute of Technology Patna is developing fast and
@@ -478,7 +478,7 @@
                 <div class="col-md-12 wow fadeInUp" data-wow-delay="0.1s">
                   <div class="about-col about-col-clip2">
                     <header class="section-header">
-                      <h2>Buildings</h2>
+                      <h2>No Ragging</h2>
                     </header>
                     <p>
                       The Students' Gymkhana of IIT Patna (established in 2008) is
@@ -517,7 +517,7 @@
                 <div class="col-md-12 wow fadeInUp" data-wow-delay="0.1s">
                   <div class="about-col about-col-clip1">
                     <header class="section-header">
-                      <h2>Gymnasium</h2>
+                      <h2>Annual Fest</h2>
                     </header>
                     <p>
                       The Students' Gymkhana of IIT Patna (established in 2008) is
@@ -556,7 +556,7 @@
                 <div class="col-md-12 wow fadeInUp" data-wow-delay="0.1s">
                   <div class="about-col about-col-clip2">
                     <header class="section-header">
-                      <h2>Mess</h2>
+                      <h2>Amenities</h2>
                     </header>
                     <p>
                       The Students' Gymkhana of IIT Patna (established in 2008) is
@@ -594,7 +594,7 @@
                 <div class="col-md-12 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="about-col about-col-clip1">
                       <header class="section-header">
-                        <h2>Gymnasium</h2>
+                        <h2>Everyday Activities</h2>
                       </header>
                       <p>
                         The Students' Gymkhana of IIT Patna (established in 2008) is
@@ -633,7 +633,7 @@
                   <div class="col-md-12 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="about-col about-col-clip2">
                       <header class="section-header">
-                        <h2>Mess</h2>
+                        <h2>Hostel Council</h2>
                       </header>
                       <p>
                         The Students' Gymkhana of IIT Patna (established in 2008) is
