--- a/hostel.html
+++ b/hostel.html
@@ -56,11 +56,6 @@
             margin: 20px;
         }
     </style>
-
-    <!--Pagination-->
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="jquery.easyPaginate.js"></script>
-
   </head>
 
   <body>
@@ -319,9 +314,7 @@
     <section id="clubs">
         <div class="container">
           <header class="section-header">
-            <h1 class="display-4 text-center">
-              Hostel Rules
-            </h1>
+            <h3>Hostel Rules</h3>
           </header>
           <div class="row row-clubs">
             <div
@@ -435,7 +428,7 @@
             <header class="section-header">
               <h3>Warden's Message</h3>
             </header>
-            <div class="row row-clubs">
+            <div class="row row-clubs" style=>
               <div class="col col-content col-content-text wow fadeInUp" data-wow-delay="0.1s">
                   <div class="bg-text">
                     <h5>Dear Students,</h5>
