--- a/reachIITP.html
+++ b/reachIITP.html
@@ -188,7 +188,7 @@
               <br>
               <a href="https://www.iitp.ac.in/"> IIT Patna</a>            
               <br>
-              <a href="https://www.iitp.ac.in/hostel/reachIITP.html"> Reach Us</a>              
+              <a href="https://www.iitp.ac.in/hostel/"> Hostel</a>              
               <br>
               <a href="https://www.iitp.ac.in/alumni/"> IIT-P AA</a>              
             </div>
