--- a/hostel.html
+++ b/hostel.html
@@ -1163,7 +1163,7 @@
                   <a
                     href="imghostel/campus2.jpg"
                     data-lightbox="gallery"
-                    data-title="Campus 1"
+                    data-title="Campus"
                     class="link-preview"
                     title="Preview"
                     ><i class="ion ion-eye"></i
@@ -1186,7 +1186,7 @@
                     href="imghostel/campus3.jpg"
                     class="link-preview"
                     data-lightbox="gallery"
-                    data-title="Campus 2"
+                    data-title="Campus"
                     title="Preview"
                     ><i class="ion ion-eye"></i
                   ></a>
@@ -1209,7 +1209,7 @@
                     href="imghostel/campus11.png"
                     class="link-preview"
                     data-lightbox="gallery"
-                    data-title="Event 3"
+                    data-title="Campus"
                     title="Preview"
                     ><i class="ion ion-eye"></i
                   ></a>
@@ -1229,7 +1229,7 @@
                     href="imghostel/campus14.jpeg"
                     class="link-preview"
                     data-lightbox="gallery"
-                    data-title="Event 2"
+                    data-title="Campus"
                     title="Preview"
                     ><i class="ion ion-eye"></i
                   ></a>
@@ -1252,7 +1252,7 @@
                     href="imghostel/campus5.jpg"
                     class="link-preview"
                     data-lightbox="gallery"
-                    data-title="Club 3"
+                    data-title="Campus"
                     title="Preview"
                     ><i class="ion ion-eye"></i
                   ></a>
@@ -1273,7 +1273,7 @@
                     href="imghostel/campus8.jpg"
                     class="link-preview"
                     data-lightbox="gallery"
-                    data-title="Event 1"
+                    data-title="Campus"
                     title="Preview"
                     ><i class="ion ion-eye"></i
                   ></a>
@@ -1294,7 +1294,7 @@
                     href="imghostel/celesta1.jpg"
                     class="link-preview"
                     data-lightbox="gallery"
-                    data-title="Campus 2"
+                    data-title="Line Follower"
                     title="Preview"
                     ><i class="ion ion-eye"></i
                   ></a>
@@ -1316,7 +1316,7 @@
                     href="imghostel/celesta2.jpg"
                     class="link-preview"
                     data-lightbox="gallery"
-                    data-title="Campus 2"
+                    data-title="Aqua Soccer"
                     title="Preview"
                     ><i class="ion ion-eye"></i
                   ></a>
@@ -1338,7 +1338,7 @@
                     href="imghostel/celesta3.jpg"
                     class="link-preview"
                     data-lightbox="gallery"
-                    data-title="Campus 2"
+                    data-title="Chem-e-switch"
                     title="Preview"
                     ><i class="ion ion-eye"></i
                   ></a>
@@ -1360,7 +1360,7 @@
                     href="imghostel/celesta4.jpg"
                     class="link-preview"
                     data-lightbox="gallery"
-                    data-title="Campus 2"
+                    data-title="Drone Workshop"
                     title="Preview"
                     ><i class="ion ion-eye"></i
                   ></a>
@@ -1382,7 +1382,7 @@
                     href="imghostel/celesta5.jpg"
                     class="link-preview"
                     data-lightbox="gallery"
-                    data-title="Campus 2"
+                    data-title="Robotics Workshop"
                     title="Preview"
                     ><i class="ion ion-eye"></i
                   ></a>
@@ -1404,7 +1404,7 @@
                     href="imghostel/celesta6.jpg"
                     class="link-preview"
                     data-lightbox="gallery"
-                    data-title="Campus 2"
+                    data-title="Guest Lecture"
                     title="Preview"
                     ><i class="ion ion-eye"></i
                   ></a>
@@ -1426,7 +1426,7 @@
                     href="imghostel/anwesha7.JPG"
                     class="link-preview"
                     data-lightbox="gallery"
-                    data-title="Campus 2"
+                    data-title="DJ Carnivore"
                     title="Preview"
                     ><i class="ion ion-eye"></i
                   ></a>
@@ -1448,7 +1448,7 @@
                     href="imghostel/anwesha2.JPG"
                     class="link-preview"
                     data-lightbox="gallery"
-                    data-title="Campus 2"
+                    data-title="Raghu Dixit (Band Night)"
                     title="Preview"
                     ><i class="ion ion-eye"></i
                   ></a>
@@ -1470,7 +1470,7 @@
                     href="imghostel/anwesha3.JPG"
                     class="link-preview"
                     data-lightbox="gallery"
-                    data-title="Campus 2"
+                    data-title="After Acoustics (Band Night)"
                     title="Preview"
                     ><i class="ion ion-eye"></i
                   ></a>
@@ -1492,7 +1492,7 @@
                     href="imghostel/anwesha4.JPG"
                     class="link-preview"
                     data-lightbox="gallery"
-                    data-title="Campus 2"
+                    data-title="Heel Turn (Cultural Night)"
                     title="Preview"
                     ><i class="ion ion-eye"></i
                   ></a>
@@ -1514,7 +1514,7 @@
                     href="imghostel/anwesha5.JPG"
                     class="link-preview"
                     data-lightbox="gallery"
-                    data-title="Campus 2"
+                    data-title="Verve (Cultural Night)"
                     title="Preview"
                     ><i class="ion ion-eye"></i
                   ></a>
@@ -1536,7 +1536,7 @@
                   href="imghostel/anwesha6.JPG"
                   class="link-preview"
                   data-lightbox="gallery"
-                  data-title="Campus 2"
+                  data-title="Verve (Cultural Night)"
                   title="Preview"
                   ><i class="ion ion-eye"></i
                 ></a>
@@ -1558,7 +1558,7 @@
                     href="imghostel/hostelAct-1.jpg"
                     class="link-preview"
                     data-lightbox="gallery"
-                    data-title="Campus 2"
+                    data-title="Creatives & Designing"
                     title="Preview"
                     ><i class="ion ion-eye"></i
                   ></a>
@@ -1579,7 +1579,7 @@
                     href="imghostel/hostelAct-2.jpg"
                     class="link-preview"
                     data-lightbox="gallery"
-                    data-title="Event 2"
+                    data-title="Plantation Drive"
                     title="Preview"
                     ><i class="ion ion-eye"></i
                   ></a>
@@ -1603,7 +1603,7 @@
                     href="imghostel/hostelAct-3.jpg"
                     class="link-preview"
                     data-lightbox="gallery"
-                    data-title="Club 3"
+                    data-title="Plantation Drive"
                     title="Preview"
                     ><i class="ion ion-eye"></i
                   ></a>
@@ -1626,7 +1626,7 @@
                   href="imghostel/acad1.jpg"
                   class="link-preview"
                   data-lightbox="gallery"
-                  data-title="Campus 2"
+                  data-title="Workshops"
                   title="Preview"
                   ><i class="ion ion-eye"></i
                 ></a>
@@ -1647,7 +1647,7 @@
                   href="imghostel/acad2.jpg"
                   class="link-preview"
                   data-lightbox="gallery"
-                  data-title="Event 2"
+                  data-title="Workshops"
                   title="Preview"
                   ><i class="ion ion-eye"></i
                 ></a>
@@ -1671,7 +1671,7 @@
                   href="imghostel/acad3.jpg"
                   class="link-preview"
                   data-lightbox="gallery"
-                  data-title="Club 3"
+                  data-title="Workshops"
                   title="Preview"
                   ><i class="ion ion-eye"></i
                 ></a>
@@ -1694,7 +1694,7 @@
                   href="imghostel/sports1.jpg"
                   class="link-preview"
                   data-lightbox="gallery"
-                  data-title="Campus 2"
+                  data-title="Sports"
                   title="Preview"
                   ><i class="ion ion-eye"></i
                 ></a>
@@ -1714,7 +1714,7 @@
                   href="imghostel/sports2.jpg"
                   class="link-preview"
                   data-lightbox="gallery"
-                  data-title="Event 2"
+                  data-title="Sports"
                   title="Preview"
                   ><i class="ion ion-eye"></i
                 ></a>
@@ -1737,7 +1737,7 @@
                   href="imghostel/sports3.jpg"
                   class="link-preview"
                   data-lightbox="gallery"
-                  data-title="Club 3"
+                  data-title="Sports"
                   title="Preview"
                   ><i class="ion ion-eye"></i
                 ></a>
@@ -1758,7 +1758,7 @@
                   href="imghostel/sports4.jpg"
                   class="link-preview"
                   data-lightbox="gallery"
-                  data-title="Event 2"
+                  data-title="Sports"
                   title="Preview"
                   ><i class="ion ion-eye"></i
                 ></a>
@@ -1778,7 +1778,7 @@
                   href="imghostel/sports5.jpg"
                   class="link-preview"
                   data-lightbox="gallery"
-                  data-title="Event 2"
+                  data-title="Sports"
                   title="Preview"
                   ><i class="ion ion-eye"></i
                 ></a>
@@ -1798,7 +1798,7 @@
                   href="imghostel/festival1.jpg"
                   class="link-preview"
                   data-lightbox="gallery"
-                  data-title="Event 2"
+                  data-title="Diwali Celebration"
                   title="Preview"
                   ><i class="ion ion-eye"></i
                 ></a>
@@ -1822,7 +1822,7 @@
                   href="imghostel/festival3.jpg"
                   class="link-preview"
                   data-lightbox="gallery"
-                  data-title="Club 3"
+                  data-title="Bonfire"
                   title="Preview"
                   ><i class="ion ion-eye"></i
                 ></a>
@@ -1844,7 +1844,7 @@
                   href="imghostel/festival4.jpg"
                   class="link-preview"
                   data-lightbox="gallery"
-                  data-title="Event 2"
+                  data-title="Reverberance'18"
                   title="Preview"
                   ><i class="ion ion-eye"></i
                 ></a>
