--- a/reachIITP.html
+++ b/reachIITP.html
@@ -8,8 +8,8 @@
     <meta content="" name="description" />
 
     <!-- Favicons -->
-    <link href="./img/logo.ico" rel="icon" />
-    <link href="./img/logo.ico" rel="apple-touch-icon" />
+    <link href="./img/logo.png" rel="icon" />
+    <link href="./img/logo.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
     <link
@@ -103,7 +103,7 @@
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
               <div class="carousel-background">
-                <img src="imghostel/location.jpg" alt="" />
+                <img src="imghostel/locate3.jpg" alt="" />
               </div>
               <div class="carousel-container">
                 <div class="carousel-content">
