--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta content="" name="description" />
 
     <!-- Favicons -->
-    <link href="./img/logo.ico" rel="icon" />
-    <link href="./img/logo.ico" rel="apple-touch-icon" />
+    <link href="./img/logo.png" rel="icon" />
+    <link href="./img/logo.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
     <link
@@ -920,6 +920,8 @@
 
           </div>
         </div>
+
+        
       </section>
       <!-- #gallery -->
 
@@ -959,16 +961,15 @@
                         <span>Vice President, Gymkhana</span>
                       </h2>
                       <ul class="social-link">
-                        <li><a href="#" class="fa fa-facebook"></a></li>
+                        <li><a href="https://www.facebook.com/theabhinavgyan" class="fa fa-facebook"></a></li>
                         <li>
                           <a
-                            href="mailto:xyz@gmail.com"
+                            href="mailto:abkgyn@gmail.com"
                             class="fa fa-google"
                           ></a>
                         </li>
-                        <li><a href="#" class="fa fa-twitter"></a></li>
                         <li>
-                          <a href="#" class="fa fa-envelope"></a>
+                          <a href="vpgymkhana@iitp.ac.in" class="fa fa-envelope"></a>
                         </li>
                       </ul>
                     </div>
@@ -993,16 +994,15 @@
                         <span>General Secretary, Sports and Games</span>
                       </h2>
                       <ul class="social-link">
-                        <li><a href="#" class="fa fa-facebook"></a></li>
+                        <li><a href="https://www.facebook.com/vamsi.riki" class="fa fa-facebook"></a></li>
                         <li>
                           <a
-                            href="mailto:xyz@gmail.com"
+                            href="mailto:vamsireddi1998@gmail.com"
                             class="fa fa-google"
                           ></a>
                         </li>
-                        <li><a href="#" class="fa fa-twitter"></a></li>
                         <li>
-                          <a href="#" class="fa fa-envelope"></a>
+                          <a href="reddi.me16@iitp.ac.in" class="fa fa-envelope"></a>
                         </li>
                       </ul>
                     </div>
@@ -1019,16 +1019,15 @@
                         <span>General Secretary, HoSCA</span>
                       </h2>
                       <ul class="social-link">
-                        <li><a href="#" class="fa fa-facebook"></a></li>
+                        <li><a href="https://www.facebook.com/abhinav.sharma.79656921" class="fa fa-facebook"></a></li>
                         <li>
                           <a
-                            href="mailto:xyz@gmail.com"
+                            href="mailto:abhinav3706@gmail.com"
                             class="fa fa-google"
                           ></a>
                         </li>
-                        <li><a href="#" class="fa fa-twitter"></a></li>
                         <li>
-                          <a href="#" class="fa fa-envelope"></a>
+                          <a href="abhinav.ce16@iitp.ac.in " class="fa fa-envelope"></a>
                         </li>
                       </ul>
                     </div>
@@ -1037,24 +1036,23 @@
                 <div class="col-sm-6 col-md-4">
                   <div class="profile-card">
                     <div class="profile-img">
-                      <img src="img/team/2019-20/unknown.png" alt="Team Image" />
+                      <img src="img/team/2019-20/parth-kulkarni (1)-min.jpeg" alt="Team Image" />
                     </div>
                     <div class="profile-content">
                       <h2 class="title">
-                        Rishikesh Kumar
+                        Parth Kulkarni
                         <span>General Secretary,Technical Affairs</span>
                       </h2>
                       <ul class="social-link">
-                        <li><a href="#" class="fa fa-facebook"></a></li>
+                        <li><a href="https://www.facebook.com/parth.kulkarni.980	" class="fa fa-facebook"></a></li>
                         <li>
                           <a
-                            href="mailto:xyz@gmail.com"
+                            href="mailto:parthpkulkarni.pk@gmail.com"
                             class="fa fa-google"
                           ></a>
                         </li>
-                        <li><a href="#" class="fa fa-twitter"></a></li>
                         <li>
-                          <a href="#" class="fa fa-envelope"></a>
+                          <a href="kulkarni.cs16@iitp.ac.in" class="fa fa-envelope"></a>
                         </li>
                       </ul>
                     </div>
@@ -1069,26 +1067,25 @@
                   <div class="profile-card">
                     <div class="profile-img">
                       <img
-                        src="./img/team/2019-20/unknown.png"
+                        src="./img/team/2019-20/Aswin Krishna.jpg"
                         alt="Team Image"
                       />
                     </div>
                     <div class="profile-content">
                       <h2 class="title">
-                        Nipoon Gupta
+                        Aswin Krishna
                         <span>UG Representative</span>
                       </h2>
                       <ul class="social-link">
-                        <li><a href="#" class="fa fa-facebook"></a></li>
+                        <li><a href="https://m.facebook.com/aswin.krishna.7370?ref=bookmarks" class="fa fa-facebook"></a></li>
                         <li>
                           <a
-                            href="mailto:xyz@gmail.com"
+                            href="mailto:krishna.aswin77@gmail.com"
                             class="fa fa-google"
                           ></a>
                         </li>
-                        <li><a href="#" class="fa fa-twitter"></a></li>
                         <li>
-                          <a href="#" class="fa fa-envelope"></a>
+                          <a href="aswin.cb16@iitp.ac.in" class="fa fa-envelope"></a>
                         </li>
                       </ul>
                     </div>
@@ -1104,8 +1101,8 @@
                     </div>
                     <div class="profile-content">
                       <h2 class="title">
-                        Arjun Roy
-                        <span>Masters G Representative</span>
+                        Sumit Choudhary
+                        <span>Masters' Representative</span>
                       </h2>
                       <ul class="social-link">
                         <li><a href="#" class="fa fa-facebook"></a></li>
@@ -1115,7 +1112,6 @@
                             class="fa fa-google"
                           ></a>
                         </li>
-                        <li><a href="#" class="fa fa-twitter"></a></li>
                         <li>
                           <a href="#" class="fa fa-envelope"></a>
                         </li>
@@ -1127,26 +1123,25 @@
                   <div class="profile-card">
                     <div class="profile-img">
                       <img
-                        src="./img/team/2018-19/unknown.png"
+                        src="./img/team/2019-20/Kuldeep Awasthi-min2-min.jpg"
                         alt="Team Image"
                       />
                     </div>
                     <div class="profile-content">
                       <h2 class="title">
-                        Mayank Kumar Jha
-                        <span>PG Representative</span>
+                        Kuldeep Awasthi
+                        <span>Ph.D. Representative</span>
                       </h2>
                       <ul class="social-link">
-                        <li><a href="#" class="fa fa-facebook"></a></li>
+                        <li><a href="https://www.facebook.com/kuldeep2255	" class="fa fa-facebook"></a></li>
                         <li>
                           <a
-                            href="mailto:xyz@gmail.com"
+                            href="mailto:kuldeep.pme16@iitp.ac.in"
                             class="fa fa-google"
                           ></a>
                         </li>
-                        <li><a href="#" class="fa fa-twitter"></a></li>
                         <li>
-                          <a href="#" class="fa fa-envelope"></a>
+                          <a href="kuldeep.pme16@iitp.ac.in" class="fa fa-envelope"></a>
                         </li>
                       </ul>
                     </div>
