--- a/gymkhana/pages iitp/index.html
+++ b/gymkhana/pages iitp/index.html
@@ -68,7 +68,7 @@
                   <li><a href="#festival" style="font-size: 14px;">Festivals</a></li>
                   <li><a href="#event" style="font-size: 14px;">Events</a></li>
                   <li><a href="#tech" style="font-size: 14px;">Technical Clubs</a></li>
-                  <li><a href="#cult" style="font-size: 14px;">Cultural Clubs</a></li>
+                  <li><a href="#cul" style="font-size: 14px;">Cultural Clubs</a></li>
                   <li><a href="#sports" style="font-size: 14px;">Sports Club</a></li>
                   <li><a href="#admins" style="font-size: 14px;">Admins & Department</a></li>
                   <li><a href="#tweet" style="font-size: 14px;">Tweets</a></li>
